# Remote-Display

./: .clang-format  CMakeLists.txt  frame_cli.py  frames.hpp  framesrv.cpp  framesrv.hpp  main.c  opaque.hpp  pollable.cpp  pollable.hpp  ring_buf.hpp  test_ring_buf.cpp  tmp.cpp  webvga.cpp  window.cpp
GlfwDisplay/: CMakeLists.txt  frame_cli.py  frames.hpp  framesrv.cpp  framesrv.hpp  opaque.hpp  pollable.hpp  ring_buf.hpp  test_frame_server.cpp  window.cpp  window.hpp
fbapp/: moving_dot.py
fbdev/: .gitignore  Makefile  virt_fbdev.c
fbsampler/: Makefile  fb_sampler.c
